--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -3,8 +3,7 @@ name: Testing the Python code
 on:
   push:
     branches:
-      - main
-
+      - master
 jobs:
   build:
 
@@ -12,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.10" ]
-    
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -26,6 +25,6 @@ jobs:
       - name: Lint with pycodestyle
         run: |
           pycodestyle src test
-          - name: Test with pytest
+      - name: Test with pytest
         run: |
           PYTHONPATH=./:./src/ pytest test
